--- a/css/reset.css
+++ b/css/reset.css
@@ -2,10 +2,13 @@
   margin: 0;
   padding: 0;
   border: none;
-
+  outline: none;
 }
 body {
-  font-family: 'Verdana', sans-serif;
+  font-family: 'Helvetica','Verdana', sans-serif;
+}
+textarea {
+  font-family: inherit;
 }
 a {
   color: inherit;
