--- a/css/block/card.css
+++ b/css/block/card.css
@@ -1,12 +1,13 @@
 .card {
   display: inline-block;
   box-sizing: border-box;
+  margin: 15px 10px 25px 35px;
   padding: 16px;
   width: 25%;
   position: relative;
   border-radius: 10px;
   box-shadow: 5px 5px 5px #888888;
-  
+
 }
 .wrap-card-options {
   position: absolute;
